# prism-evals-v1

./: .gitignore  DESIGN.md  PARALLEL_DEV.md  pyproject.toml
docs/plans/: 2026-03-04-dashboard-v2-design.md  2026-03-04-dashboard-v2-implementation.md  2026-03-04-dashboard-v2-implementation.md.tasks.json
llm_eval/: __init__.py  cli.py  dashboard.py  dashboard_v2.py  models.py  prompts.py  store.py  tracer.py
notebooks/: generate_eval_traces.ipynb  test_e2e.ipynb  test_models_store.ipynb  test_prompts_tracer.ipynb
